--- a/src/index.css
+++ b/src/index.css
@@ -142,29 +142,11 @@ body {
 }
 
 html {
-  /* scroll-behavior: smooth;  Lenis ke saath conflict nahi hona chahiye*/
+  scroll-behavior: smooth;
   scroll-padding-top: 5rem; 
 }
 
-html.lenis, html.lenis body {
-  height: auto;
-}
 
-.lenis.lenis-smooth {
-  scroll-behavior: auto !important;
-}
-
-.lenis.lenis-smooth [data-lenis-prevent] {
-  overscroll-behavior: contain;
-}
-
-.lenis.lenis-stopped {
-  overflow: hidden;
-}
-
-.lenis.lenis-scrolling iframe {
-  pointer-events: none;
-}
 
 @media print {
   body {
